--- a/style/scss/_home.scss
+++ b/style/scss/_home.scss
@@ -250,7 +250,7 @@ nav {
 }
 
 .header {
-      margin: -4% 10% 0 10%;
+      margin: 0 auto 0 10%;
       z-index: 1;
   h1 {
       font-weight: 400;
